--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^12.1.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swiper": "^8.0.7"
   },
   "devDependencies": {
     "eslint": "8.8.0",
